--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,19 +1,108 @@
 nav {
   background-color: var(--lightest);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2em;
+  position: fixed;
+  top: 0;
+  width: calc(100% - 4em);
 }
 
 nav ul {
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: space-evenly;
   list-style: none;
+}
+
+.ul-logo {
+  margin: 5px 0 !important;
+}
+
+.ul-menu {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ul-menu-small {
+  display: none;
+}
+
+.ul-menu li,
+.ul-menu-small li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav ul li a {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+.griddy-img {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-areas: "the-one";
+}
+
+.bg-img,
+.marui-img,
+.circle-img {
+  grid-area: the-one;
+  border-radius: 50%;
+}
+
+.bg-img {
+  background-color: #666dad;
+}
+
+.marui-img {
+  height: 100px;
+  padding: 2px 0;
+}
+
+.marui-img img {
+  height: 100%;
+}
+
+.circle-img {
+  border: 6px solid #000;
+}
+
+@media screen and (max-width: 1025px) {
+  nav {
+    padding: 0 1em;
+    width: calc(100% - 2em);
+  }
+
+  nav ul li a {
+    font-size: 1em;
+  }
+
+  .marui-img {
+    height: 80px;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .marui-img {
+    height: 60px;
+  }
+
+  .circle-img {
+    border-width: 4px;
+  }
+
+  .ul-menu {
+    display: none;
+  }
+
+  .ul-menu-small {
+    display: block;
+  }
 }
