--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,106 @@
 <nav>
-  <ul>
+  <ul class="ul-logo">
     <li>
-      <a [routerLink]="['/']">home</a>
+      <a [routerLink]="['/']">
+        <div class="sms-avatar">
+          <!-- <svg
+            viewBox="30 -1 60 60"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="60"
+            height="60"
+          >
+            <defs>
+              <mask id="mask">
+                <ellipse
+                  cx="100%"
+                  cy="50%"
+                  rx="45%"
+                  ry="45%"
+                  fill="white"
+                ></ellipse>
+              </mask>
+            </defs>
+
+            <rect
+              width="120"
+              height="120"
+              fill="#666dad"
+              mask="url(#mask)"
+            ></rect>
+            <image
+              xlink:href="../assets/marui_standard_not_as_render_transparent.png"
+              width="120"
+              height="120"
+              mask="url(#mask)"
+            ></image>
+
+            <ellipse
+              cx="100%"
+              cy="50%"
+              rx="45%"
+              ry="45%"
+              stroke="black"
+              stroke-width="4"
+              fill="none"
+            ></ellipse>
+          </svg> -->
+          <!-- <svg
+            viewBox="0 0 60 60"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="60"
+            height="60"
+          >
+            <ellipse
+              cx="50%"
+              cy="50%"
+              rx="50%"
+              ry="50%"
+              fill="#666dad"
+            ></ellipse>
+            <image
+              xlink:href="../assets/marui_512.png"
+              width="60"
+              height="60"
+            ></image>
+
+            <ellipse
+              cx="50%"
+              cy="50%"
+              rx="46.7%"
+              ry="46.7%"
+              stroke="black"
+              stroke-width="4"
+              fill="none"
+            ></ellipse>
+          </svg> -->
+          <div class="griddy-img">
+            <div class="bg-img"></div>
+            <div #maruiImg class="marui-img">
+              <img src="../../assets/marui_256.png" alt="marui_512 logo" />
+            </div>
+            <div class="circle-img"></div>
+          </div>
+        </div>
+      </a>
     </li>
+  </ul>
+  <ul class="ul-menu">
+    <li>
+      <a [routerLink]="['/tldr']">tl;dr</a>
+    </li>
+    <li>
+      <a [routerLink]="['/alternance']">alternance</a>
+    </li>
+    <li>
+      <a [routerLink]="['/build-a-dev']">build-a-dev</a>
+    </li>
+    <li>
+      <a [routerLink]="['/contact']">contact</a>
+    </li>
+  </ul>
+  <ul class="ul-menu-small">
     <li>
       <a [routerLink]="['/tldr']">tl;dr</a>
     </li>
