--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,117 +1,58 @@
 <nav>
-  <ul class="ul-logo">
-    <li>
-      <a [routerLink]="['/']">
-        <div class="sms-avatar">
-          <!-- <svg
-            viewBox="30 -1 60 60"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            width="60"
-            height="60"
-          >
-            <defs>
-              <mask id="mask">
-                <ellipse
-                  cx="100%"
-                  cy="50%"
-                  rx="45%"
-                  ry="45%"
-                  fill="white"
-                ></ellipse>
-              </mask>
-            </defs>
-
-            <rect
-              width="120"
-              height="120"
-              fill="#666dad"
-              mask="url(#mask)"
-            ></rect>
-            <image
-              xlink:href="../assets/marui_standard_not_as_render_transparent.png"
-              width="120"
-              height="120"
-              mask="url(#mask)"
-            ></image>
-
-            <ellipse
-              cx="100%"
-              cy="50%"
-              rx="45%"
-              ry="45%"
-              stroke="black"
-              stroke-width="4"
-              fill="none"
-            ></ellipse>
-          </svg> -->
-          <!-- <svg
-            viewBox="0 0 60 60"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            width="60"
-            height="60"
-          >
-            <ellipse
-              cx="50%"
-              cy="50%"
-              rx="50%"
-              ry="50%"
-              fill="#666dad"
-            ></ellipse>
-            <image
-              xlink:href="../assets/marui_512.png"
-              width="60"
-              height="60"
-            ></image>
-
-            <ellipse
-              cx="50%"
-              cy="50%"
-              rx="46.7%"
-              ry="46.7%"
-              stroke="black"
-              stroke-width="4"
-              fill="none"
-            ></ellipse>
-          </svg> -->
-          <div class="griddy-img">
-            <div class="bg-img"></div>
-            <div #maruiImg class="marui-img">
-              <img src="../../assets/marui_256.png" alt="marui_512 logo" />
+  <div class="nav-rel">
+    <ul class="ul-logo">
+      <li>
+        <a [routerLink]="['/']">
+          <div class="sms-avatar">
+            <div class="griddy-img">
+              <div class="bg-img"></div>
+              <div #maruiImg class="marui-img">
+                <img src="../../assets/marui_256.png" alt="marui_512 logo" />
+              </div>
+              <div class="circle-img"></div>
             </div>
-            <div class="circle-img"></div>
           </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="ul-menu">
-    <li>
-      <a [routerLink]="['/tldr']">tl;dr</a>
-    </li>
-    <li>
-      <a [routerLink]="['/alternance']">alternance</a>
-    </li>
-    <li>
-      <a [routerLink]="['/build-a-dev']">build-a-dev</a>
-    </li>
-    <li>
-      <a [routerLink]="['/contact']">contact</a>
-    </li>
-  </ul>
-  <ul class="ul-menu-small">
-    <li>
-      <a [routerLink]="['/tldr']">tl;dr</a>
-    </li>
-    <li>
-      <a [routerLink]="['/alternance']">alternance</a>
-    </li>
-    <li>
-      <a [routerLink]="['/build-a-dev']">build-a-dev</a>
-    </li>
-    <li>
-      <a [routerLink]="['/contact']">contact</a>
-    </li>
-  </ul>
+        </a>
+      </li>
+    </ul>
+
+    <ul #ulmenu class="ul-menu">
+      <li *ngFor="let myLink of myLinks">
+        <a routerLink="/{{ myLink.route }}" (click)="handleClosingMenu()">{{
+          myLink.content
+        }}</a>
+      </li>
+    </ul>
+
+    <div class="menu-icon-grid" (click)="handleToogleMenu()">
+      <svg
+        viewBox="0 0 60 60"
+        xmlns="http://www.w3.org/2000/svg"
+        width="40"
+        height="40"
+        #hamburger
+      >
+        <path
+          class="menu-icon-path"
+          d="M 15 7 c -3 1 -8 5 -11 11 c -1 4 0 5 3 5 h 46 c 3 0 4 -1 3 -5 c -6 -12 -20 -16 -33 -14 M 6 24 h 48 a 1 1 0 0 1 0 7 h -48 a 1 1 0 0 1 0 -7 M 7 32 c 0 6 0 6 2 6 h 2 c 2 0 2 0 2 2 v 6 a 1 1 0 0 0 7 0 v -6 c 0 -2 0 -2 2 -2 h 8 M 38 38 h 13 c 2 0 2 0 2 -2 v -4 M 6 38 a 1 1 0 0 0 0 7 h 7 M 21 45 h 33 a 1 1 0 0 0 0 -7 M 5 46 c 1 6 6 10 12 11 h 27 c 6 -1 10 -5 11 -11 M 44 17 h 0 M 34 17 h 0 M 39 11 h 0"
+          fill="none"
+          stroke-linecap="round"
+        />
+      </svg>
+      <svg
+        viewBox="0 0 60 60"
+        xmlns="http://www.w3.org/2000/svg"
+        width="40"
+        height="40"
+        #bones
+      >
+        <path
+          class="menu-icon-path"
+          d="M 14 14 a 1 1 0 0 0 -9 9 c 3 3 7 2 9 0 l 2 2 M 33 42 l 4 4 c -2 2 -3 6 0 9 a 1 1 0 0 0 9 -9 a 1 1 0 0 0 9 -9 c -3 -3 -7 -2 -9 0 l -2 -2 M 27 18 l -4 -4 c 2 -2 3 -6 0 -9 a 1 1 0 0 0 -9 9 M 14 46 a 1 1 0 0 0 9 9 c 3 -3 2 -7 0 -9 l 23 -23 c 2 2 6 3 9 0 a 1 1 0 0 0 -9 -9 a 1 1 0 0 0 -9 -9 c -3 3 -2 7 0 9 l -23 23 c -2 -2 -6 -3 -9 0 a 1 1 0 0 0 9 9"
+          fill="none"
+          stroke-linecap="round"
+        />
+      </svg>
+    </div>
+  </div>
 </nav>
