--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -33,6 +33,30 @@
         #hamburger
       >
         <path
+          class="buns-fill"
+          d="M 23 4 c -11 2 -16 8 -19 14 c -1 4 0 5 3 5 h 46 c 3 0 4 -1 3 -5 c -6 -12 -20 -16 -33 -14 Z M 5 46 c 1 6 6 10 12 11 h 27 c 6 -1 10 -5 11 -11 Z"
+          fill="none"
+          stroke="0"
+        />
+        <path
+          class="patty-fill"
+          d="M 6 24 h 48 a 1 1 0 0 1 0 7 h -48 a 1 1 0 0 1 0 -7 Z"
+          fill="none"
+          stroke="0"
+        />
+        <path
+          class="salad-fill"
+          d="M 6 38 a 1 1 0 0 0 0 7 h 48 a 1 1 0 0 0 0 -7 Z"
+          fill="none"
+          stroke="0"
+        />
+        <path
+          class="cheese-fill"
+          d="M 7 32 c 0 6 0 6 2 6 h 2 c 2 0 2 0 2 2 v 6 a 1 1 0 0 0 7 0 v -6 c 0 -2 0 -2 2 -2 h 29 c 2 0 2 0 2 -2 v -4 Z"
+          fill="none"
+          stroke="0"
+        />
+        <path
           class="menu-icon-path"
           d="M 15 7 c -3 1 -8 5 -11 11 c -1 4 0 5 3 5 h 46 c 3 0 4 -1 3 -5 c -6 -12 -20 -16 -33 -14 M 6 24 h 48 a 1 1 0 0 1 0 7 h -48 a 1 1 0 0 1 0 -7 M 7 32 c 0 6 0 6 2 6 h 2 c 2 0 2 0 2 2 v 6 a 1 1 0 0 0 7 0 v -6 c 0 -2 0 -2 2 -2 h 8 M 38 38 h 13 c 2 0 2 0 2 -2 v -4 M 6 38 a 1 1 0 0 0 0 7 h 7 M 21 45 h 33 a 1 1 0 0 0 0 -7 M 5 46 c 1 6 6 10 12 11 h 27 c 6 -1 10 -5 11 -11 M 44 17 h 0 M 34 17 h 0 M 39 11 h 0"
           fill="none"
@@ -47,8 +71,14 @@
         #bones
       >
         <path
+          class="bones-fill"
+          d="M 30 39 l 7 7 c -2 2 -3 6 0 9 a 1 1 0 0 0 9 -9 a 1 1 0 0 0 9 -9 c -3 -3 -7 -2 -9 0 l -7 -7 Z M 30 21 l -7 -7 c 2 -2 3 -6 0 -9 a 1 1 0 0 0 -9 9 a 1 1 0 0 0 -9 9 c 3 3 7 2 9 0 l 7 7 Z M 14 46 a 1 1 0 0 0 9 9 c 3 -3 2 -7 0 -9 l 23 -23 c 2 2 6 3 9 0 a 1 1 0 0 0 -9 -9 a 1 1 0 0 0 -9 -9 c -3 3 -2 7 0 9 l -23 23 c -2 -2 -6 -3 -9 0 a 1 1 0 0 0 9 9 Z"
+          fill="none"
+          stroke="0"
+        />
+        <path
           class="menu-icon-path"
-          d="M 14 14 a 1 1 0 0 0 -9 9 c 3 3 7 2 9 0 l 2 2 M 33 42 l 4 4 c -2 2 -3 6 0 9 a 1 1 0 0 0 9 -9 a 1 1 0 0 0 9 -9 c -3 -3 -7 -2 -9 0 l -2 -2 M 27 18 l -4 -4 c 2 -2 3 -6 0 -9 a 1 1 0 0 0 -9 9 M 14 46 a 1 1 0 0 0 9 9 c 3 -3 2 -7 0 -9 l 23 -23 c 2 2 6 3 9 0 a 1 1 0 0 0 -9 -9 a 1 1 0 0 0 -9 -9 c -3 3 -2 7 0 9 l -23 23 c -2 -2 -6 -3 -9 0 a 1 1 0 0 0 9 9"
+          d="M 33 42 l 4 4 c -2 2 -3 6 0 9 a 1 1 0 0 0 9 -9 a 1 1 0 0 0 9 -9 c -3 -3 -7 -2 -9 0 l -2 -2 M 27 18 l -4 -4 c 2 -2 3 -6 0 -9 a 1 1 0 0 0 -9 9 a 1 1 0 0 0 -9 9 c 3 3 7 2 9 0 l 2 2 M 14 46 a 1 1 0 0 0 9 9 c 3 -3 2 -7 0 -9 l 23 -23 c 2 2 6 3 9 0 a 1 1 0 0 0 -9 -9 a 1 1 0 0 0 -9 -9 c -3 3 -2 7 0 9 l -23 23 c -2 -2 -6 -3 -9 0 a 1 1 0 0 0 9 9"
           fill="none"
           stroke-linecap="round"
         />
