home and tl;dr added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,23 @@
 <main>
-  <p>home works!</p>
-  <div style="height: 150vh"></div>
+  <div class="home-grid">
+    <div class="home-item home-item-name">
+      <h1>
+        <span>JONATHAN</span>
+        <span>LITTARDI</span>
+      </h1>
+    </div>
+
+    <div class="home-item home-item-title">
+      <h2>
+        <span>À LA RECHERCHE</span>
+        <span>D'UNE ALTERNANCE DE</span>
+        <span>CONCEPTEUR DÉVELOPPEUR</span>
+        <span>D'APPLICATION WEB</span>
+      </h2>
+    </div>
+
+    <div class="home-item home-item-pic">
+      <img src="../../assets/marui_512.png" />
+    </div>
+  </div>
 </main>
