--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="nav-rel">
     <ul class="ul-logo">
       <li>
-        <a [routerLink]="['/']">
+        <a [routerLink]="['/']" (click)="handleClosingMenu()">
           <div class="sms-avatar">
             <div class="griddy-img">
               <div class="bg-img"></div>
