--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -7,6 +7,7 @@ nav {
   position: fixed;
   top: 0;
   width: calc(100% - calc(var(--lf-pad-medium) * 2));
+  z-index: 1;
 }
 
 .nav-rel {
@@ -106,7 +107,7 @@ nav ul li a {
   display: none;
 }
 
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1023px) {
   nav {
     padding: 0 var(--lf-pad-small);
     width: calc(100% - calc(var(--lf-pad-small) * 2));
@@ -121,7 +122,7 @@ nav ul li a {
   }
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 767px) {
   .nav-rel {
     position: relative;
     display: block;
