contact added and tldr shortened in loop

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,73 @@
 <main>
-  <p>contact works!</p>
-  <div style="height: 150vh"></div>
+  <footer class="block">
+    <h3>CONTACT</h3>
+    <div class="block-footer">
+      <div class="block-footer-item block-footer-email">
+        <svg viewBox="0 0 34 19" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M 1 1 h 32 l -16 8 z M 1 18 l 12 -7 l 4 2 l 4 -2 l 12 7 z M 1 5 l 8.31 4.15 l -8.31 4.85 z M 33 5 l -8.31 4.15 l 8.31 4.85 z"
+            stroke-linejoin="round"
+            fill="black"
+            stroke="black"
+          />
+        </svg>
+        <a
+          href="mailto:jonaz_littardi@hotmail.com?subject=Contacter%20Jonathan&body=Message%20from%20Jonathan-in-the-spotlight"
+          >jonaz_littardi@hotmail.com</a
+        >
+      </div>
+      <div class="block-footer-item block-footer-phone">
+        <svg viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M 8.364 1.212 c 0.955 -0.217 1.707 -0.038 2.061 0.789 l 2.857 6.646 c 0.351 0.816 0.328 1.532 -0.277 2.021 l -3.804 3.091 c 2.807 5.095 5.311 8.115 11.021 11.034 l 2.874 -3.541 c 0.621 -0.768 1.226 -0.98 2.041 -0.632 l 6.845 2.947 c 0.801 0.348 1.016 1.046 0.836 1.845 l -1.44 6.222 c -0.198 0.852 -0.846 1.362 -1.968 1.233 c -15.349 -0.5 -28.39 -12.487 -28.324 -28.627 c 0.009 -0.744 0.227 -1.385 1.272 -1.636 Z"
+            stroke-linejoin="round"
+            fill="black"
+            stroke="black"
+          />
+        </svg>
+        <span>07 66 81 53 02</span>
+      </div>
+
+      <div class="block-footer-item">
+        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M 7 3 v 26 h 18 v -19 l -6 -7 Z"
+            stroke="black"
+            stroke-width="3"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            fill="none"
+            class="no-fill"
+          />
+          <path
+            d="M 16 14 v 8 M 11 19 l 5 5 l 5 -5"
+            stroke="black"
+            stroke-width="3"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            fill="none"
+            class="no-fill"
+          />
+          <path
+            d="M 19 3 v 7 h 6 Z"
+            stroke="black"
+            stroke-width="3"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            fill="black"
+            class="with-fill"
+          />
+        </svg>
+        <a
+          href="../../assets/JONATHAN_LITTARDI - CV - Alternance - Java - Angular.pdf"
+          download="JL-CV.pdf"
+          >Download C.V.</a
+        >
+      </div>
+    </div>
+  </footer>
+  <div class="miscellaneous">
+    <h4>About this web page</h4>
+    <p>Responsive Web Design</p>
+  </div>
 </main>
