--- a/src/app/tldr/tldr.component.html
+++ b/src/app/tldr/tldr.component.html
@@ -1,400 +1,116 @@
 <main>
-  <div class="sms-outer-most">
-    <div class="sms-outer-grid">
-      <div class="sms-outer-grid-item">
-        <h4>Q&A</h4>
-      </div>
-      <div class="sms-outer-grid-item">
-        <div class="sms-bg"></div>
-      </div>
-
-      <div class="sms-outer-grid-item">
-        <div class="sms-recruiter">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-              <rect width="150" height="150" fill="#f5f242" mask="url(#mask)" />
-              <image
-                xlink:href="../../assets/hiring.png"
-                width="150"
-                height="150"
-                transform="scale(0.35) translate(140 38)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-recruiter-content"
-            >Bonjour. Pourriez-vous vous présenter brièvement ?</span
-          >
+  <div class="block tldr-block">
+    <h3>TL;DR</h3>
+    <div class="sms-outer-most">
+      <div class="sms-outer-grid">
+        <div class="sms-outer-grid-item">
+          <div class="sms-bg"></div>
         </div>
-      </div>
-      <div class="sms-outer-grid-item">
-        <div class="sms-candidate">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
+        <div class="sms-outer-grid-item">
+          <ng-template #smsTemplate let-sms>
+            <div class="sms-grid">
+              <div class="sms-grid-item">
+                <div class="sms-recruiter">
+                  <div class="sms-avatar">
+                    <svg
+                      viewBox="0 -1 150 150"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="150"
+                      height="150"
+                    >
+                      <defs>
+                        <mask id="mask">
+                          <ellipse
+                            cx="50%"
+                            cy="25%"
+                            rx="25%"
+                            ry="25%"
+                            fill="white"
+                          ></ellipse>
+                        </mask>
+                      </defs>
+                      <rect
+                        width="150"
+                        height="150"
+                        fill="#f5f242"
+                        mask="url(#mask)"
+                      />
+                      <image
+                        xlink:href="../../assets/hiring.png"
+                        width="150"
+                        height="150"
+                        transform="scale(0.35) translate(140 38)"
+                      ></image>
+                      <ellipse
+                        cx="50%"
+                        cy="25%"
+                        rx="24%"
+                        ry="24%"
+                        stroke="black"
+                        stroke-width="4"
+                        fill="none"
+                      ></ellipse>
+                    </svg>
+                  </div>
+                  <span class="sms-recruiter-content">{{
+                    sms.recruiterContent
+                  }}</span>
+                </div>
+              </div>
+              <div class="sms-grid-item">
+                <div class="sms-candidate">
+                  <div class="sms-avatar">
+                    <svg
+                      viewBox="0 -1 150 150"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="150"
+                      height="150"
+                    >
+                      <defs>
+                        <mask id="mask">
+                          <ellipse
+                            cx="50%"
+                            cy="25%"
+                            rx="25%"
+                            ry="25%"
+                            fill="white"
+                          ></ellipse>
+                        </mask>
+                      </defs>
 
-              <image
-                xlink:href="../../assets/marui_standard_not_as_render.png"
-                width="150"
-                height="150"
-                mask="url(#mask)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-candidate-content"
-            >Je m'appelle Jonathan, j'ai 41 ans.
-            <br />
-            J'ai été accepté pour une alternance avec le centre de formation
-            Diginamic.
-            <br />
-            Je cherche une entreprise pour m'accueillir du 15/03/2023 au
-            16/09/2024.</span
-          >
-        </div>
-      </div>
+                      <image
+                        xlink:href="../../assets/marui_standard_not_as_render.png"
+                        width="150"
+                        height="150"
+                        mask="url(#mask)"
+                      ></image>
+                      <ellipse
+                        cx="50%"
+                        cy="25%"
+                        rx="24%"
+                        ry="24%"
+                        stroke="black"
+                        stroke-width="4"
+                        fill="none"
+                      ></ellipse>
+                    </svg>
+                  </div>
+                  <span
+                    class="sms-candidate-content"
+                    [innerHTML]="sms.candidateContent"
+                  ></span>
+                </div>
+              </div>
+            </div>
+          </ng-template>
 
-      <div class="sms-outer-grid-item">
-        <div class="sms-recruiter">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-              <rect width="150" height="150" fill="#f5f242" mask="url(#mask)" />
-              <image
-                xlink:href="../../assets/hiring.png"
-                width="150"
-                height="150"
-                transform="scale(0.35) translate(140 38)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
+          <div *ngFor="let sms of smsList">
+            <ng-container
+              *ngTemplateOutlet="smsTemplate; context: { $implicit: sms }"
+            ></ng-container>
           </div>
-          <span class="sms-recruiter-content"
-            >Vous êtes donc en reconversion professionnelle. Pouvez-vous nous
-            parler de votre expérience ?</span
-          >
-        </div>
-      </div>
-      <div class="sms-outer-grid-item">
-        <div class="sms-candidate">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-
-              <image
-                xlink:href="../../assets/marui_standard_not_as_render.png"
-                width="150"
-                height="150"
-                mask="url(#mask)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-candidate-content"
-            >En tant qu'artiste indépendant, j'étais autonome, curieux et
-            organisé. Mon passé me sert aujourd'hui pour la conception de projet
-            et un regard attentionné sur l'UX et l'UI.
-            <br />
-            Ma passion pour les sciences informatiques et le web en particulier
-            font de moi un développeur fullstack.
-          </span>
-        </div>
-      </div>
-
-      <div class="sms-outer-grid-item">
-        <div class="sms-recruiter">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-              <rect width="150" height="150" fill="#f5f242" mask="url(#mask)" />
-              <image
-                xlink:href="../../assets/hiring.png"
-                width="150"
-                height="150"
-                transform="scale(0.35) translate(140 38)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-recruiter-content"
-            >Quels outils connaissez-vous ?</span
-          >
-        </div>
-      </div>
-      <div class="sms-outer-grid-item">
-        <div class="sms-candidate">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-
-              <image
-                xlink:href="../../assets/marui_standard_not_as_render.png"
-                width="150"
-                height="150"
-                mask="url(#mask)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-candidate-content">
-            <span class="sms-content-newline">
-              J'ai une appétence pour les langages objet, en particulier Java et
-              TypeScript. J'ai déjà codé des petits projets en Angular et Spring
-              Boot.
-              <br />
-              Mon editeur de texte préféré est VSCode, pour sa possibilité
-              d'attacher des conteneurs Docker et de facilement gérer ses
-              repositories.
-            </span>
-            Je m'intéresse également à l'Extreme Programming et la TDD. J'ai
-            donc appris à utiliser JestJS pour tester mon code.
-          </span>
-        </div>
-      </div>
-
-      <div class="sms-outer-grid-item">
-        <div class="sms-recruiter">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-              <rect width="150" height="150" fill="#f5f242" mask="url(#mask)" />
-              <image
-                xlink:href="../../assets/hiring.png"
-                width="150"
-                height="150"
-                transform="scale(0.35) translate(140 38)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-recruiter-content"
-            >Pour finir, quels sont vos centres d'intérêts ?</span
-          >
-        </div>
-      </div>
-      <div class="sms-outer-grid-item">
-        <div class="sms-candidate">
-          <div class="sms-avatar">
-            <svg
-              viewBox="0 -1 150 150"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="150"
-              height="150"
-            >
-              <defs>
-                <mask id="mask">
-                  <ellipse
-                    cx="50%"
-                    cy="25%"
-                    rx="25%"
-                    ry="25%"
-                    fill="white"
-                  ></ellipse>
-                </mask>
-              </defs>
-
-              <image
-                xlink:href="../../assets/marui_standard_not_as_render.png"
-                width="150"
-                height="150"
-                mask="url(#mask)"
-              ></image>
-              <ellipse
-                cx="50%"
-                cy="25%"
-                rx="24%"
-                ry="24%"
-                stroke="black"
-                stroke-width="4"
-                fill="none"
-              ></ellipse>
-            </svg>
-          </div>
-          <span class="sms-candidate-content"
-            >En ce moment, je lis <q>Head First, Design Pattern</q> et pratique
-            au fur et à mesure. Je garde un repo github de mes notes.
-            <br />
-            <span class="sms-content-newline">
-              Je parcours également des articles sur la blockchain,
-              l'intelligence artificielle (neural network) et les WebSockets.
-            </span>
-            <span class="sms-content-newline">
-              Je pratique les directives en Angular et j'ai un intérêt
-              grandissant pour le Web Assembly que j'ai testé en Golang.
-            </span>
-            Pour me détendre, je dessine. J'aime bien Blender pour l'animation.
-            Je fais des icônes en SVG et du pixel art.
-          </span>
         </div>
       </div>
     </div>
