--- a/src/app/tldr/tldr.component.css
+++ b/src/app/tldr/tldr.component.css
@@ -5,7 +5,7 @@ main {
 }
 
 .sms-outer-most {
-  padding: 0 0.5em;
+  padding: 1em 0.5em 2em;
   font-size: 0.9em;
 }
 
@@ -13,7 +13,6 @@ main {
   display: grid;
   grid-template-rows: 1em auto 1em;
   grid-template-columns: 2fr 4fr 1em;
-  margin-bottom: 2em;
 }
 
 .sms-outer-grid-item:nth-child(1) {
@@ -54,80 +53,6 @@ main {
   grid-area: candidate;
   grid-column: 2 / 4;
 }
-
-/* .sms-outer-grid {
-  max-width: 850px;
-  margin: auto;
-  display: grid;
-  grid-template-rows: repeat(var(--no-rows), auto);
-  grid-template-columns: repeat(6, 1fr) 1em;
-  row-gap: 10px;
-}
-
-.sms-outer-grid-item:not(:nth-child(1)) {
-  grid-row: span 1;
-}
-
-.sms-outer-grid-item:nth-child(1) {
-  grid-row: 1 / 11;
-  grid-column: 3 / 8;
-}
-
-.sms-outer-grid-item:nth-child(even) {
-  grid-column: 1 / 6;
-}
-
-.sms-outer-grid-item:nth-child(odd):not(:nth-child(1)) {
-  grid-column: 2 / 7;
-}
-
-.sms-outer-grid-item:nth-child(2) {
-  grid-row: 2 / 3;
-}
-
-.sms-outer-grid-item:nth-child(3) {
-  grid-row: 3 / 4;
-}
-
-.sms-outer-grid-item:nth-child(4) {
-  grid-row: 4 / 5;
-}
-
-.sms-outer-grid-item:nth-child(5) {
-  grid-row: 5 / 6;
-}
-
-.sms-outer-grid-item:nth-child(6) {
-  grid-row: 6 / 7;
-}
-
-.sms-outer-grid-item:nth-child(7) {
-  grid-row: 7 / 8;
-}
-
-.sms-outer-grid-item:nth-child(8) {
-  grid-row: 8 / 9;
-}
-
-.sms-outer-grid-item:nth-child(9) {
-  grid-row: 9 / 10;
-}
-
-.sms-outer-grid-item:nth-child(1) .sms-bg {
-  background-color: var(--purple);
-  background: linear-gradient(var(--purple), #7320f1);
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-}
-
-.sms-outer-grid-item h4 {
-  color: var(--purple);
-  text-decoration: underline;
-  text-align: center;
-  font-size: 1.3em;
-  font-weight: 900;
-} */
 
 .sms-recruiter,
 .sms-candidate {
@@ -174,11 +99,6 @@ rect {
   margin-left: 65px;
 }
 
-::slotted(span.sms-content-newline) {
-  display: inline-block;
-  margin-bottom: 1em;
-}
-
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .sms-outer-most {
     font-size: 1em;
@@ -187,14 +107,14 @@ rect {
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .sms-outer-most {
-    padding: 0 2em;
+    padding: 1em 2em 2em;
     font-size: 1em;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .sms-outer-most {
-    padding: 0 4em;
+    padding: 1em 4em 2em;
     font-size: 1em;
   }
 
