--- a/src/app/build-a-dev/build-a-dev.component.css
+++ b/src/app/build-a-dev/build-a-dev.component.css
@@ -56,6 +56,21 @@ article {
   font-weight: bold;
   cursor: grab;
 }
+.language {
+  background-color: yellow;
+}
+.framework {
+  background-color: yellowgreen;
+}
+.test {
+  background-color: pink;
+}
+.devOps {
+  background-color: salmon;
+}
+.knowhow {
+  background-color: springgreen;
+}
 
 .output {
   list-style-type: decimal;
