alternance added. skills still need some work

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,8 @@
   --darkest: #5b5a57;
   --cardboard-dark: #d0bcad;
   --cardboard-light: #f1ebe4;
+  --company-color: #f5b730;
+  --formation-color: #213d55;
   --green: #2cff00;
   --pink: #f41d7c;
   --purple: #8b3dff;
