--- a/src/app/build-a-dev/build-a-dev.component.css
+++ b/src/app/build-a-dev/build-a-dev.component.css
@@ -91,6 +91,7 @@ article {
 @media screen and (orientation: portrait) and (max-width: 767px) {
   .flexy-game {
     flex-direction: column;
+    align-items: center;
   }
   .skill {
     margin: 5px;
