path for deployment

--- a/src/app/tldr/tldr.component.html
+++ b/src/app/tldr/tldr.component.html
@@ -37,7 +37,7 @@
                         mask="url(#mask)"
                       />
                       <image
-                        xlink:href="../../assets/hiring.png"
+                        xlink:href="/assets/hiring.png"
                         width="150"
                         height="150"
                         transform="scale(0.35) translate(140 38)"
@@ -81,7 +81,7 @@
                       </defs>
 
                       <image
-                        xlink:href="../../assets/marui_standard_not_as_render.png"
+                        xlink:href="/assets/marui_standard_not_as_render.png"
                         width="150"
                         height="150"
                         mask="url(#mask)"
