--- a/src/app/build-a-dev/build-a-dev.component.html
+++ b/src/app/build-a-dev/build-a-dev.component.html
@@ -16,11 +16,11 @@
         (drop)="handleDrop($event)"
       >
         <img
-          src="/assets/no_marui_bg_transparent.png"
+          src="./assets/no_marui_bg_transparent.png"
           alt="gauge like background"
         />
         <img
-          src="/assets/marui_standard_not_as_render_transparent.png"
+          src="./assets/marui_standard_not_as_render_transparent.png"
           alt="marui me to fill the gauge"
         />
       </div>
