--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="home-item home-item-pic">
-      <img src="/assets/marui_512.png" />
+      <img src="./assets/marui_512.png" />
     </div>
   </div>
 </main>
