--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
             <div class="griddy-img">
               <div class="bg-img"></div>
               <div #maruiImg class="marui-img">
-                <img src="/assets/marui_256.png" alt="marui_512 logo" />
+                <img src="./assets/marui_256.png" alt="marui_512 logo" />
               </div>
               <div class="circle-img"></div>
             </div>
