--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -59,7 +59,7 @@
           />
         </svg>
         <a
-          href="/assets/JONATHAN_LITTARDI - CV - Alternance - Java - Angular.pdf"
+          href="./assets/JONATHAN_LITTARDI - CV - Alternance - Java - Angular.pdf"
           download="JL-CV.pdf"
           >Download C.V.</a
         >
