--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -60,7 +60,7 @@
         </svg>
         <a
           href="./assets/JONATHAN_LITTARDI - CV - Alternance - Java - Angular.pdf"
-          download="JL-CV.pdf"
+          download="Jonathan-Littardi-CV.pdf"
           >Download C.V.</a
         >
       </div>
